# monorepo

./: .gitignore  .gn  BUILD.gn  COPYRIGHT.OpenSource  Fix-CVE-2023-45322-pre-patch.patch  FreeBSD.gni  NuttX.gni  OAT.xml  README.OpenSource  README.md  README_zh.md  ark.py  ark_root.gni  backport-CVE-2022-40304-Fix-dict-corruption-caused-by-entity-.patch  backport-parser-Fix-potential-memory-leak-in-xmlParseAttValue.patch  bundle.json  config_linux.json  ets_frontend_config.gni  install.py  js_runtime_config.gni  kernel_linux_patches  libedit.spec  libprotobuf.map  libprotobuf_lite.map  musl_src.gni  ncurses-config.patch  ncurses.spec  prebuilts_download_config.json  toolchain.gni  xml_version.json
arkcompiler/ets_runtime/test/: runtest.py  test_helper.gni
arkcompiler/toolchain/: BUILD.gn  OAT.xml  bundle.json
arkcompiler/toolchain/inspector/: BUILD.gn  connect_inspector.cpp  connect_inspector.h  connect_server.cpp  connect_server.h  inspector.cpp  library_loader.cpp  log_wrapper.cpp  log_wrapper.h  ws_server.cpp  ws_server.h
arkcompiler/toolchain/tooling/: debugger_service.h  protocol_handler.cpp
arkcompiler/toolchain/websocket/: BUILD.gn  websocket.cpp  websocket.h
compiler/tests/: BUILD.gn  compiler_inst_test.cpp  dominators_tree_new_test.cpp  dump_test.cpp  graph_test.h  inst_generator.h  linear_order_new_test.cpp  liveness_analyzer_new_test.cpp  loop_analyzer_new_test.cpp  loop_analyzer_test.cpp  reg_alloc_common_test.cpp  reg_alloc_graph_coloring_test.cpp  unit_test.h  vixl_exec_module.h
compiler/tests/js/: simpleTryCatch.js  styleTryCatch.js
developtools/profiler/hiebpf/: BUILD.gn
device/: .clang-format  BUILD.gn
device/base/: config.gni
device/base/include/: common.h  schedule_task_manager.h
device/base/src/: common.cpp  epoll_event_poller.cpp  i_semaphore.cpp  posix_semaphore.cpp  schedule_task_manager.cpp  std_semaphore.cpp
device/cmds/: BUILD.gn
device/cmds/include/: command_line.h  command_param.h  command_param_switch.h  parse_plugin_config.h
device/cmds/src/: command_param.cpp  command_param_text.cpp  parse_plugin_config.cpp
device/etc/: hiprofiler.para  hiprofilerd.cfg
device/plugins/api/: BUILD.gn
device/plugins/arkts_plugin/: BUILD.gn
device/plugins/ftrace_plugin/: ftrace.gni
device/plugins/hidump_plugin/: BUILD.gn
device/plugins/hisysevent_plugin/: BUILD.gn
device/plugins/memory_plugin/: BUILD.gn
device/plugins/native_daemon/: BUILD.gn
device/plugins/native_hook/: BUILD.gn
device/plugins/sample_plugin/: BUILD.gn
device/plugins/stream_plugin/: BUILD.gn
device/services/ipc/: BUILD.gn
device/services/profiler_service/: BUILD.gn
device/services/shared_memory/: BUILD.gn
ecmascript/compiler/: BUILD.gn  access_object_stub_builder.h  assembler_module.cpp  async_function_lowering.h  builtins_lowering.cpp  call_signature.h  circuit.cpp  circuit_builder.h  common_stubs.h  compiler_log.cpp  early_elimination.cpp  gate_meta_data.cpp  graph_editor.cpp  later_elimination.cpp  lcr_lowering.cpp  lcr_lowering.h  llvm_codegen.h  new_object_stub_builder.h  number_speculative_retype.cpp  number_speculative_runner.cpp  object_access_helper.cpp  operations_stub_builder.h  rt_call_signature.h  scheduler.h  slowpath_lowering.cpp  state_split_linearizer.cpp  state_split_linearizer.h  stub.h  stub_builder.h  ts_class_analysis.cpp  ts_hclass_generator.cpp  ts_hclass_generator.h  type_mcr_lowering.h
ecmascript/compiler/aot_file/: an_file_data_manager.cpp  an_file_info.cpp  aot_file_info.h  binary_buffer_parser.cpp  elf_reader.h
ecmascript/compiler/base/: depend_chain_helper.h
ecmascript/compiler/builtins/: builtins_collection_stub_builder.h  builtins_function_stub_builder.cpp  builtins_stubs.cpp  containers_hashmap_stub_builder.h  linked_hashtable_stub_builder.cpp
ecmascript/compiler/tests/: lowering_relate_gate_test.cpp
ecmascript/compiler/type_inference/: global_type_infer.h  initialization_analysis.cpp  initialization_analysis.h  pgo_type_infer.cpp
fuzztest/atoi_fuzzer/: BUILD.gn  atoi_fuzzer.cpp  atoi_fuzzer.h
ndk_script/: BUILD.gn  copy_ndk_musl_headers.sh
ohos_lite/: BUILD.gn
proto_encoder/: BUILD.gn
proto_encoder/example/: example.proto
proto_encoder/test/: BUILD.gn
sbin/newfs_msdos/: BUILD.gn  mkfs_define.h  newfs_msdos.c
test/: test_helper.gni
test/aottest/async_loop/: expect_output.txt
test/aottest/asyncgeneratorrest/: BUILD.gn
test/aottest/bigint_typed_array_constructors/: BUILD.gn
test/aottest/call_same_bytecode_func/: BUILD.gn
test/aottest/calls/: BUILD.gn  calls.ts
test/aottest/class_method_signature/: class_method_signature.ts  expect_output.txt
test/aottest/classstatic/: expect_output.txt
test/aottest/compiler_test/: BUILD.gn
test/aottest/constructor_returns_non_object/: BUILD.gn
test/aottest/continue_from_finally/: BUILD.gn
test/aottest/createarraywithbuffer/: expect_output.txt
test/aottest/createemptyarray/: BUILD.gn
test/aottest/createemptyobject/: BUILD.gn
test/aottest/createiterresultobj/: BUILD.gn
test/aottest/createobjectwithbuffer/: createobjectwithbuffer.ts  expect_output.txt
test/aottest/defineclass/: defineclass.js
test/aottest/defineclasswithbuffer/: BUILD.gn
test/aottest/definefunc/: BUILD.gn
test/aottest/definemethod/: BUILD.gn
test/aottest/delobjprop/: BUILD.gn
test/aottest/deopt/: BUILD.gn
test/aottest/forloop/: BUILD.gn  (+1 more)
test/fuzztest/: BUILD.gn
test/moduletest/: BUILD.gn
test/scripts/: readme_zh.md  send_email.py
test/typeinfer/: BUILD.gn
tooling/: BUILD.gn  debugger_service.cpp  dispatcher.cpp  dispatcher.h  protocol_channel.h  protocol_handler.h
tooling/agent/: debugger_impl.h  heapprofiler_impl.h  profiler_impl.h  tracing_impl.cpp  tracing_impl.h
tooling/backend/: debugger_executor.h
tooling/base/: pt_base64.h  pt_events.cpp  pt_params.cpp  pt_returns.cpp  pt_script.h  pt_types.cpp
tooling/test/: BUILD.gn  debugger_cinterp_test.cpp  debugger_commands_test.cpp  debugger_entry_test.cpp  debugger_returns_test.cpp  debugger_script_test.cpp  debugger_service_test.cpp  js_pt_hooks_test.cpp  protocol_handler_test.cpp
(+13366 files in other folders)
